Basic project setup, remove boilerplate

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,8 +19,10 @@
     "types": ["node", "vite/client"],
     "paths": {
       "~/*": ["./src/*"]
-    }
+    },
+    "allowArbitraryExtensions": true,
+    "noUncheckedIndexedAccess": true
   },
   "files": ["./.eslintrc.cjs"],
-  "include": ["src", "./*.d.ts", "./*.config.ts"]
+  "include": ["src", "./*.d.ts", "./*.config.ts", "./*.config.js"]
 }
