--- a/package.json
+++ b/package.json
@@ -23,16 +23,33 @@
   "devDependencies": {
     "@builder.io/qwik": "^1.2.10",
     "@builder.io/qwik-city": "^1.2.10",
+    "@builder.io/qwik-react": "0.5.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.13.0",
+    "@mui/x-data-grid": "^6.4.0",
     "@types/eslint": "8.44.1",
+    "@types/lodash": "^4.14.197",
     "@types/node": "^20.4.5",
+    "@types/react": "18.2.17",
+    "@types/react-dom": "18.2.7",
     "@typescript-eslint/eslint-plugin": "6.2.0",
     "@typescript-eslint/parser": "6.2.0",
+    "autoprefixer": "^10.4.14",
     "eslint": "8.45.0",
     "eslint-plugin-qwik": "^1.2.10",
+    "postcss": "8.4.27",
     "prettier": "3.0.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
     "undici": "5.22.1",
     "vite": "4.4.7",
     "vite-tsconfig-paths": "4.2.0"
+  },
+  "dependencies": {
+    "@qwikest/icons": "^0.0.8",
+    "lodash": "^4.17.21"
   }
 }
